--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,3 +1,19 @@
+@font-face {
+  font-family: 'Morice Straight W03 Bold';
+  src: url('https://db.onlinewebfonts.com/t/2ed70bbaeeb682103949b4358616bedf.eot'); /* IE9*/
+  src: url('https://db.onlinewebfonts.com/t/2ed70bbaeeb682103949b4358616bedf.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('https://db.onlinewebfonts.com/t/2ed70bbaeeb682103949b4358616bedf.woff2')
+      format('woff2'),
+    /* chrome firefox */
+      url('https://db.onlinewebfonts.com/t/2ed70bbaeeb682103949b4358616bedf.woff') format('woff'),
+    /* chrome firefox */ url('https://db.onlinewebfonts.com/t/2ed70bbaeeb682103949b4358616bedf.ttf')
+      format('truetype'),
+    /* chrome firefox opera Safari, Android, iOS 4.2+*/
+      url('https://db.onlinewebfonts.com/t/2ed70bbaeeb682103949b4358616bedf.svg#Morice Straight W03 Bold')
+      format('svg'); /* iOS 4.1- */
+}
+
 body {
   margin: 0;
   padding: 0;
